CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(SimFemLibPython)
FILE(GLOB PYBINFILES bin/*.in)
FOREACH(PYBINFILE ${PYBINFILES})
	get_filename_component(FILE ${PYBINFILE} NAME)
	string(REGEX REPLACE "\\.[^.]*$" "" FILE ${FILE})
	CONFIGURE_FILE(
	  ${PYBINFILE}
		${FILE} @ONLY
		)
	INSTALL( FILES ${CMAKE_BINARY_DIR}/${FILE}
		DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
		PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_READ WORLD_READ
		)
ENDFOREACH()
