#-------------------------------------------#

SET(DIRECTORIES
Alat
Perulangan
Mesh
Solvers
FadalightAdaptiveMesh
FadalightMesh
)

FOREACH(DIRECTORY ${DIRECTORIES})
  AUX_SOURCE_DIRECTORY(${DIRECTORY} SRC)
  INCLUDE_DIRECTORIES(${DIRECTORY})
ENDFOREACH(DIRECTORY)
INCLUDE_DIRECTORIES(${SIMFEM_EXTERNAL_INCLUDES} ${CMAKE_INSTALL_PREFIX}/include)

ADD_LIBRARY(${LIBRARYCPP} ${SRC})
TARGET_LINK_LIBRARIES(${LIBRARYCPP} ${SIMFEM_EXTERNAL_LINKLIBS})


get_property(SIMFEM_INCLUDES DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)

INCLUDE(SimFemSummary)
INCLUDE(SimFemSaveVariables)

#-------------------------------------------#
INSTALL(TARGETS ${LIBRARYCPP} DESTINATION lib)
FOREACH(DIRECTORY ${DIRECTORIES})
  FILE(GLOB HFILES ${DIRECTORY}/${DIRECTORY}/*.hpp)
  INSTALL(FILES ${HFILES} DESTINATION include/${DIRECTORY})
ENDFOREACH(DIRECTORY)
