#-------------------------------------------#
ADD_LIBRARY(${LIBRARYPY} ${SRCPY})
TARGET_LINK_LIBRARIES(${LIBRARYPY} ${SIMFEM_EXTERNAL_LINKLIBS} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${SIMFEMCPPLIBRARY})
set_target_properties(${LIBRARYPY} PROPERTIES PREFIX "" )
set_target_properties(${LIBRARYPY} PROPERTIES SUFFIX .so)
INSTALL(TARGETS ${LIBRARYPY} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
